force-app/main/default/objects/Vote__c/Vote__c.object-meta.xml
<CustomObject>
    <label>Vote</label>
    <nameField>
        <displayFormat>Vote-{0000}</displayFormat>
        <label>Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>