force-app/main/default/objects/Vote__c/fields/Unique_Vote__c.field-meta.xml
<CustomField>
    <fullName>Unique_Vote__c</fullName>
    <formula>Voted_By__r.Id  &amp;  Voted_on_Record__r.Id</formula>
    <label>Unique Vote</label>
    <type>Text</type>
</CustomField>