force-app/main/default/objects/Vote__c/fields/Unique_Vote_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Vote_ID__c</fullName>
    <label>Unique Vote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>