force-app/main/default/objects/Vote__c/fields/Voted_By__c.field-meta.xml
<CustomField>
    <fullName>Voted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>