force-app/main/default/objects/Vote__c/fields/Voted_on_Record__c.field-meta.xml
<CustomField>
    <fullName>Voted_on_Record__c</fullName>
    <label>Voted on Record</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>